# Qemu-Dll-shadps4

./: meson.build  meson_options.txt  os-win32.c  qemu-system-shadps4-dll-usage.txt  qemu_uwp_embedding_changes.txt  shadps4_qemu_machine_mapping.txt
audio/: audio.c  audio_template.h  meson.build  xaudio2audio.c
block/: file-win32.c  meson.build
build-aux/: mesa-dxil-native.ini
build-aux/pkgconfig/: directx-headers.pc
chardev/: char-file.c  char-pipe.c  char-serial.c  char-stdio.c  meson.build
configs/devices/x86_64-shadps4-softmmu/: default.mak
configs/targets/: x86_64-shadps4-softmmu.mak
hw/i386/: Kconfig  meson.build  shadps4-codecs.inc.c  shadps4-gpu-d3d12.c  shadps4-gpu-d3d12.h  shadps4-gpu-dxil.c  shadps4-gpu-dxil.h  shadps4-gpu.c  shadps4-gpu.h  shadps4-hle.c  shadps4-hle.h  shadps4-http.inc.c  shadps4-io.c  shadps4-io.h  shadps4-loader.c  shadps4-loader.h  shadps4-reviewed-providers.inc  shadps4-services2.inc.c  shadps4-services3.inc.c  shadps4-services4.inc.c  shadps4-services5.inc.c  shadps4-services6.inc.c  shadps4-trivial-providers.inc  shadps4.c
include/qemu/: qemu-host.h
include/system/: system.h
net/: meson.build  tap-stub.c
qapi/: audio.json  ui.json
scripts/: meson-buildoptions.sh  qemu-version.sh  shadps4-audit-nids.py  shadps4-generate-trivial-providers.py
storage-daemon/: meson.build
subprojects/dtc/: .meson-subproject-wrap-hash.txt
subprojects/shadps4-gcn-bridge/: CMakeLists.txt  bridge-memory.h  fetch_shader_uwp.cpp  flatten_extended_userdata_uwp.cpp  program_uwp.cpp  shadps4-gcn-bridge.cpp  shadps4-gcn-bridge.h
subprojects/shadps4-gcn-bridge/compat/common/logging/: log.h
subprojects/shadps4-gcn-bridge/compat/core/: emulator_settings.h
system/: host.c  meson.build  runstate.c
tests/shadps4/: README.txt  test_brokered_storage.py  test_fault_diagnostics.py  test_loader.py  test_titles.py
ui/: host-display.c  meson.build
util/: coroutine-windows.c  error-report.c  meson.build  oslib-win32.c  qemu-host-log.c
